--- a/index.html
+++ b/index.html
@@ -16,52 +16,52 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 -->
 <html>
 <head>
-    <!-- This tells the browser how to read the document. -->
-    <meta charset="utf-8">
+  <!-- This tells the browser how to read the document. -->
+  <meta charset="utf-8">
 
-    <!-- Tells the browser what the title of this page should be. -->
-    <title>Resume</title>
+  <!-- Tells the browser what the title of this page should be. -->
+  <title>Resume</title>
 
-    <!-- Load the page styles. -->
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Load the page styles. -->
+  <link href="css/style.css" rel="stylesheet">
 
 
-    <!--
-    Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
-    -->
-    <!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+  <!--
+  Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
+  -->
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
 
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 <div id="main">
-    <!--
-    Everything from here to the <script> tag below is the skeleton of your
-    website. Your code will add information to each of the sections of the
-    resume below. You can pretty easily figure out what each section will
-    display by looking at the id or at what's written between the <h2> tags.
-    -->
-    <div id="header" class="center-content clear-fix">
-        <ul id="topContacts" class="flex-box"></ul>
-    </div>
-    <div style="clear: both;"></div>
-    <div id="workExperience" class="gray">
-        <h2>Work Experience</h2>
-    </div>
-    <div id="projects">
-        <h2>Projects</h2>
-    </div>
-    <div id="education" class="gray">
-        <h2>Education</h2>
-    </div>
-    <div id="mapDiv">
-        <h2>Where I've Lived and Worked</h2>
-    </div>
-    <div id="lets-connect" class="dark-gray">
-        <h2 class="orange center-text">Let's Connect</h2>
-        <ul id="footerContacts" class="flex-box">
-        </ul>
-    </div>
+  <!--
+  Everything from here to the <script> tag below is the skeleton of your
+  website. Your code will add information to each of the sections of the
+  resume below. You can pretty easily figure out what each section will
+  display by looking at the id or at what's written between the <h2> tags.
+  -->
+  <div id="header" class="center-content clear-fix">
+    <ul id="topContacts" class="flex-box"></ul>
+  </div>
+  <div style="clear: both;"></div>
+  <div id="workExperience" class="gray">
+    <h2>Work Experience</h2>
+  </div>
+  <div id="projects">
+    <h2>Projects</h2>
+  </div>
+  <div id="education" class="gray">
+    <h2>Education</h2>
+  </div>
+  <div id="mapDiv">
+    <h2>Where I've Lived and Worked</h2>
+  </div>
+  <div id="lets-connect" class="dark-gray">
+    <h2 class="orange center-text">Let's Connect</h2>
+    <ul id="footerContacts" class="flex-box">
+    </ul>
+  </div>
 </div>
 
 <!-- "HTML is loaded by the browser in the order it appears in the file. If the JavaScript is loaded first and it is
@@ -110,41 +110,41 @@ course.
 -->
 
 <script>
-    // Notice how all of a sudden there's JavaScript inside this HTML
-    // document? You can write JavaScript between <script> tags. At the end of your
-    // JavaScript, don't forget the closing script tag with the slash (/).
+  // Notice how all of a sudden there's JavaScript inside this HTML
+  // document? You can write JavaScript between <script> tags. At the end of your
+  // JavaScript, don't forget the closing script tag with the slash (/).
 
 
-    // Also, this is a JavaScript style comment. You can comment in JavaScript with:
+  // Also, this is a JavaScript style comment. You can comment in JavaScript with:
 
-    //   two slashes for all following characters on a single line, or
+  //   two slashes for all following characters on a single line, or
 
-    /*
-     an opening and closing set of slash asterisks for block comments.
-     */
+  /*
+   an opening and closing set of slash asterisks for block comments.
+   */
 
 
-    if (document.getElementsByClassName('flex-item').length === 0) {
-        document.getElementById('topContacts').style.backgroundColor = '#000000';
-    }
-    if (document.getElementsByTagName('h1').length === 0) {
-        document.getElementById('header').style.backgroundColor = '#000000';
-    }
-    if (document.getElementsByClassName('work-entry').length === 0) {
-        document.getElementById('workExperience').style.backgroundColor = '#000000';
-    }
-    if (document.getElementsByClassName('project-entry').length === 0) {
-        document.getElementById('projects').style.backgroundColor = '#000000';
-    }
-    if (document.getElementsByClassName('education-entry').length === 0) {
-        document.getElementById('education').style.backgroundColor = '#000000';
-    }
-    if (document.getElementsByClassName('flex-item').length === 0) {
-        document.getElementById('lets-connect').style.backgroundColor = '#000000';
-    }
-    if (document.getElementById('map') === null) {
-        document.getElementById('mapDiv').style.backgroundColor = '#000000';
-    }
+  if (document.getElementsByClassName('flex-item').length === 0) {
+    document.getElementById('topContacts').style.backgroundColor = '#000000';
+  }
+  if (document.getElementsByTagName('h1').length === 0) {
+    document.getElementById('header').style.backgroundColor = '#000000';
+  }
+  if (document.getElementsByClassName('work-entry').length === 0) {
+    document.getElementById('workExperience').style.backgroundColor = '#000000';
+  }
+  if (document.getElementsByClassName('project-entry').length === 0) {
+    document.getElementById('projects').style.backgroundColor = '#000000';
+  }
+  if (document.getElementsByClassName('education-entry').length === 0) {
+    document.getElementById('education').style.backgroundColor = '#000000';
+  }
+  if (document.getElementsByClassName('flex-item').length === 0) {
+    document.getElementById('lets-connect').style.backgroundColor = '#000000';
+  }
+  if (document.getElementById('map') === null) {
+    document.getElementById('mapDiv').style.backgroundColor = '#000000';
+  }
 </script>
 </body>
 </html>
