--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
-  <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+  <script
+      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCtkQs-7xp30rFbRPjGFD072QXoc4p77Ns&libraries=places"></script>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
